# twilic-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  semgrep.yml
include/twilic/: codec.h  dictionary.h  interop_fixtures.h  protocol.h  protocol_helpers.h  session.h  twilic.h  twilic_internal.h  v2.h  version.h
scripts/: check-c-client-interop.sh  check-interop.sh  cpp_to_c.py
src/: codec.c  dictionary.c  errors.c  interop_fixtures.c  model.c  protocol.c  protocol_helpers.c  session.c  twilic.c  v2.c  wire.c
test/: bound_batch_stateful_spec_test.c  codec_spec_vectors_test.c  control_stream_and_control_spec_test.c  coverage_boost_test.c  dynamic_profile_spec_test.c  interop_fixtures_test.c  test_helpers.c  test_helpers.h  test_internal.h
tools/: decode_rust_server_fixtures.c  emit_rust_client_fixtures.c
